force-app/main/default/objects/Charket__FormField__c/Charket__FormField__c.object-meta.xml
<CustomObject>
    <label>Form Field</label>
    <nameField>
        <displayFormat>FF-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>