force-app/main/default/objects/Charket__FormField__c/fields/Charket__DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>Charket__DefaultValue__c</fullName>
    <label>Default Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>