force-app/main/default/objects/Charket__FormField__c/fields/Charket__IsRequired__c.field-meta.xml
<CustomField>
    <fullName>Charket__IsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>