force-app/main/default/objects/Charket__FormField__c/fields/Charket__LabelLayout__c.field-meta.xml
<CustomField>
    <fullName>Charket__LabelLayout__c</fullName>
    <label>Label Layout</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Top</fullName>
            </value>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Hidden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>